crates/flowlog-build/tests/errors/parser/undeclared_iterative.dl
fixpoint { .iterative ghost_rel }
